<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_notes"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_all_notes" />
    </group>

    <item android:title="@string/group_by_date">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_today"
                    android:icon="@android:drawable/ic_menu_today"
                    android:title="@string/menu_today" />
                <item
                    android:id="@+id/nav_yesterday"
                    android:icon="@android:drawable/ic_menu_recent_history"
                    android:title="@string/menu_yesterday" />
                <item
                    android:id="@+id/nav_this_week"
                    android:icon="@android:drawable/ic_menu_week"
                    android:title="@string/menu_this_week" />
                <item
                    android:id="@+id/nav_this_month"
                    android:icon="@android:drawable/ic_menu_month"
                    android:title="@string/menu_this_month" />
            </group>
        </menu>
    </item>

    <item android:title="@string/group_other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>